[package]
name = "sgl-node"
version = "1.5.0"
edition = "2021"
description = "SGL Network node agent — confidential AI compute provider for the Singularity grid"

[[bin]]
name = "sgl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
bs58 = "0.5"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hex = "0.4"
# WebSocket transport (primary dispatch + streaming; REST stays as fallback).
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
# In-process inference (v1.5.0, behind the `inprocess` feature). Vendors + builds
# llama.cpp via cmake. Pin exact once the PoC resolves a version (crate doesn't follow
# semver). Metal on macOS via the `metal` feature.
llama-cpp-2 = { version = "=0.1.150", optional = true }  # pin exact: crate tracks llama.cpp, no semver
# Render the GGUF's jinja chat template EXACTLY like llama-server (the crate's
# apply_chat_template uses llama.cpp's legacy engine, which omits Llama-3's date/system
# preamble — see the parity finding). minijinja + chrono give byte-identical prompts.
minijinja = { version = "2", optional = true }
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock", "std"] }

[features]
inprocess = ["dep:llama-cpp-2", "dep:minijinja", "dep:chrono"]
metal = ["llama-cpp-2/metal"]

[[example]]
name = "inproc_poc"
required-features = ["inprocess"]
